[package]
name = "tashi-token"
version = "1.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ['rlib', 'cdylib']

[package.metadata.partisiablockchain]
cargo-partisia = "4.70.0"

[dependencies]
pbc_contract_common = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git" }
pbc_contract_codegen = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git" }
pbc_traits = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git" }
pbc_lib = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git" }
read_write_rpc_derive = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git" }
read_write_state_derive = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git" }
create_type_spec_derive = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git" }

[features]
abi = [
    "pbc_contract_common/abi",
    "pbc_contract_codegen/abi",
    "pbc_traits/abi",
    "create_type_spec_derive/abi",
    "pbc_lib/abi",
]
